<resources>
    <string name="app_name">customapp</string>
    <string name="title_details">Details</string>
    <string name="title_alert">Alert</string>
    <string name="title_map">Map</string>
    <string name="title_id">Id</string>
    <string name="title_name">Name</string>
    <string name="title_address">Home Address</string>
    <string name="title_phone">Phone</string>
    <string name="title_email">Email</string>
    <string name="title_age">Age</string>
    <string name="title_button_update">Update</string>
    <string name="title_button_create">Create</string>
    <string name="title_password">Password</string>
    <string name="title_signin">Sign in</string>
    <string name="title_signout">Sign out</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_button_location">Allow app to get location</string>
    <string name="category_very_dangerous">Very Dangerous</string>
    <string name="category_dangerous">Dangerous</string>
    <string name="category_suspicious">Suspicious</string>
    <string name="title_sms">SMS</string>

</resources>
