<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<!--    <Button android:id="@+id/button_permission"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerVertical="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:text="@string/title_button_location"-->
<!--        />-->

<!--    <TextView android:id="@+id/text_testing"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text="@string/title_name"/>-->

    <RelativeLayout android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
             />

        <TableLayout android:id="@+id/table_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/map_view"
            android:stretchColumns="1,2,3"
            android:layout_marginTop="50dp">

            <TableRow>

                <Button android:id="@+id/button_very_dangerous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_very_dangerous"
                    android:background="@color/colorVeryDangerous"
                    android:layout_column="1"
                    />

                <Button android:id="@+id/button_dangerous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_dangerous"
                    android:background="@color/colorDangerous"
                    />

                <Button android:id="@+id/button_suspicious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_suspicious"
                    android:background="@color/colorSuspicious"
                    />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/table_category"
            android:layout_marginTop="50dp"
            android:stretchColumns="1,2">

            <TableRow>

                <Button android:id="@+id/button_alert"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:text="@string/title_alert"
                    android:layout_column="1" />

                <Button android:id="@+id/button_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:text="@string/title_sms"
                    android:layout_column="2"
                    />


            </TableRow>

        </TableLayout>



    </RelativeLayout>






</RelativeLayout>