<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <ImageView android:id="@+id/image_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo_app_blue"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"/>

        <TextView android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/image_app"
            />

        <EditText android:id="@+id/edit_signup_name"
            android:hint="@string/title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/text_signup"
            android:layout_marginBottom="20dp"/>

        <EditText android:id="@+id/edit_signup_email"
            android:hint="@string/title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/edit_signup_name"
            android:layout_marginBottom="20dp"/>

        <EditText android:id="@+id/edit_signup_password"
            android:hint="@string/title_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_below="@+id/edit_signup_email"
            android:inputType="textPassword"
            />

        <Button android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:layout_below="@+id/edit_signup_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:textSize="20sp"
            android:onClick="signUpUsers"
            />


    </RelativeLayout>


</RelativeLayout>